# OpenAI-Assistants-Streamllit-UI

./: LICENSE  README.md  bot-ui.py  instructions.txt  make-assistant.py  oai_tools.json  pyproject.toml  sample-env.txt  style.css
.streamlit/: config.toml
util/: generate-image.py  logger.py  make_elements.py  pydantic_classes.py
